--- a/Notebooks/Scikit_research_LR.ipynb
+++ b/Notebooks/Scikit_research_LR.ipynb
@@ -31,6 +31,34 @@
     "     \n",
     " Task 2 -- Analyzing Keras implementation of Logistic regression model\n",
     "     1. Description\n",
+    "     \n",
+    "     \n",
+    " __Sprint - 29th and 30th October 2018__\n",
+    "     - Summary of tasks\n",
+    "         + Scikit + WinML research\n",
+    "         + Keras methods\n",
+    "         + Mapping these two\n",
+    "         + Performance metrics\n",
+    "         \n",
+    "      - 29th October 2018  \n",
+    "         + Scikit + WinML(2 hours - 11:00am to 1:00am)\n",
+    "             -- Complete predict and score method\n",
+    "             -- Understand how WinML is getting this done\n",
+    "             \n",
+    "         + Keras methods(3.5 hours - 1:30 to 5:00)\n",
+    "             -- Same exercise done with Scikit\n",
+    "             -- Dissect each method used in Keras\n",
+    "             \n",
+    "         + Performance metrics(4 hours - 5:30 to 9:30)\n",
+    "             \n",
+    "         + Mapping(Post text book time - 10:30+)\n",
+    "             -- Plan(can be derived only post the above 2\n",
+    "             tasks.\n",
+    "             \n",
+    "      - 30th October 2018\n",
+    "          + Mapping\n",
+    "          + Qs/doubts for the meeting(1 hour)\n",
+    "          \n",
     "    \n",
     "\n",
     "\n"
