--- a/Notebooks/Scikit_research_LR.ipynb
+++ b/Notebooks/Scikit_research_LR.ipynb
@@ -41,9 +41,13 @@
     "         + Performance metrics\n",
     "         \n",
     "      - 29th October 2018  \n",
-    "         + Scikit + WinML(2 hours - 11:00am to 1:00am)\n",
+    "         + Scikit + WinML(2 hours - 11:00am to 1:00pm)\n",
     "             -- Complete predict and score method\n",
+    "                 -> Keeping aside predict and score as these two methods wouldn't be\n",
+    "                 playing a significant role in the conversion/mapping process.\n",
     "             -- Understand how WinML is getting this done\n",
+    "                 -> Try their scikit learn conversion\n",
+    "                 -> Check the code behind each method\n",
     "             \n",
     "         + Keras methods(3.5 hours - 1:30 to 5:00)\n",
     "             -- Same exercise done with Scikit\n",
@@ -345,7 +349,9 @@
     "1. Decorators in Python\n",
     "2. utlities method in scikit\n",
     "3. classmethods\n",
-    "4. \n",
+    "4. Say we call fit method as logisticRegr.fit(x,y).  \n",
+    "Is \"self\" being returned and saved to logisticRegr object?\n",
+    "5. Is predict and score a default method provided by python?\n",
     "    "
    ]
   },
