--- a/Notebooks/Intro_to_Python_notebook.ipynb
+++ b/Notebooks/Intro_to_Python_notebook.ipynb
@@ -47,6 +47,20 @@
     " - Why is everything in Python treated as an object?\n",
     " - Why can't a digit start with '0' in Python?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3 - Py filling: lists, tuples and dictionaries #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
