--- a/Notebooks/Intro_to_Python_notebook.ipynb
+++ b/Notebooks/Intro_to_Python_notebook.ipynb
@@ -52,7 +52,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 3 - Py filling: lists, tuples and dictionaries #"
+    "# Chapter 3 - Py filling: lists, tuples and dictionaries #\n",
+    "\n",
+    "Notes\n",
+    " - Lists are mutable and tuples are immutable\n",
+    " - Tuples vs lists -- When to use tuples over lists?\n",
+    " - \n",
+    "  \n",
+    "Qs\n",
+    " - .."
    ]
   },
   {
