--- a/Notebooks/Keras fine tuning.ipynb
+++ b/Notebooks/Keras fine tuning.ipynb
@@ -11,7 +11,16 @@
     "    1. Understand Keras end to end\n",
     "    2. Start playing around with the \"nuts and bolts\" in Keras\n",
     "    3. Reflect on the feedback you get from step 2\n",
-    "    4. Final optimized version by repeating 2-3"
+    "    4. Final optimized version by repeating 2-3\n",
+    "    \n",
+    "+ Notes on Step 1\n",
+    "    + Core data structure of Keras is model\n",
+    "    + Sequential model and the functional APIs\n",
+    "    + Dense layer and it's parms\n",
+    "        + Units - \n",
+    "    + Tensor v/s matrix\n",
+    "    + The input layer in Keras is not a layer in itself but a tensor. Hence you have to define\n",
+    "    the shape of it "
    ]
   },
   {
