--- a/Notebooks/Intro_to_Python_notebook.ipynb
+++ b/Notebooks/Intro_to_Python_notebook.ipynb
@@ -64,6 +64,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4 - PyCrust: Code Structures #\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
