--- a/Notebooks/Keras fine tuning.ipynb
+++ b/Notebooks/Keras fine tuning.ipynb
@@ -37,16 +37,26 @@
     "            - Dense params\n",
     "            - compile params -- loss, optimizer etc..\n",
     "            - fit params -- batch_size, epochs etc..\n",
-    "            - Dataset normalization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Code trials #"
+    "            - Dataset normalization\n",
+    "            \n",
+    "+ Epoch v/s Batch size -- **(PENDING)**\n",
+    "    - Are the weights updated in each epochs?\n",
+    "    - Passing once v/s passing multiple times -- The dataset is the same, then how come\n",
+    "    the accuracy improves?\n",
+    "    - Batch size and number of batches are two different things\n",
+    "    - **2 key doubts(Important)**\n",
+    "        - How does the weight adjustment happen in each epoch? The math behind it.\n",
+    "        - How does Keras handle the batches in each epoch? How are the samples distributed?\n",
+    "        \n",
+    "+ Validation aspect\n",
+    "    - Validate your current result -- Overfitting or underfitting?\n",
+    "    - k fold cross validation\n",
+    "        + Using scikit learn's stratified k fold split.\n",
+    "        How does stratifiedKFold work? Use case relevant to your scenario?\n",
+    "        + Why are we choosing kfold validation and not any other?\n",
+    "    - ROC curve\n",
+    "    - Varying the threshold\n",
+    "    - "
    ]
   },
   {
@@ -69,6 +79,20 @@
     "5. earlyStopping - functionality and use cases\n",
     "6. Why do we have to normalize the dataset?\n",
     "7. More on Universal approximation theorem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code trials #"
    ]
   },
   {
@@ -635,21 +659,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
