--- a/Notebooks/Keras fine tuning.ipynb
+++ b/Notebooks/Keras fine tuning.ipynb
@@ -54,7 +54,15 @@
     "        + Using scikit learn's stratified k fold split.\n",
     "        How does stratifiedKFold work? Use case relevant to your scenario?\n",
     "        + Why are we choosing kfold validation and not any other?\n",
+    "        + How to use the results presented by kfold validation? Do I have to use the same\n",
+    "        epoch values in my model as well as validation process?\n",
     "    - ROC curve\n",
+    "        + What is an ROC curve?\n",
+    "        + Why do we have to use it?\n",
+    "        + How to implement it in your model?\n",
+    "        + Terms used\n",
+    "            - TPR(Sensitivity), FPR(1-Specificity)\n",
+    "            - Relationship between sensitivity and specificity\n",
     "    - Varying the threshold\n",
     "    - "
    ]
